--- a/icon-link.html
+++ b/icon-link.html
@@ -9,16 +9,16 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Dra. Maria José Cristobo">
   <meta property="og:description" content="Vicepresidenta · Sociedad Uruguaya de Ortodoncia">
-  <meta property="og:url" content="https://TU_USUARIO.github.io/cristobo-card/icon-link.html">
-  <meta property="og:image" content="https://TU_USUARIO.github.io/cristobo-card/og-cristobo.png">
+  <meta property="og:url" content="https://Mattosardy.github.io/cristobo-card/icon-link.html">
+  <meta property="og:image" content="https://Mattosardy.github.io/cristobo-card/og-cristobo.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
 
   <!-- Redirección inmediata a la landing de contacto -->
-  <meta http-equiv="refresh" content="0; url=https://TU_USUARIO.github.io/cristobo-card/">
+  <meta http-equiv="refresh" content="0; url=https://Mattosardy.github.io/cristobo-card/">
   <script>
     // Fallback por si el meta refresh no corre
-    window.location.replace("https://TU_USUARIO.github.io/cristobo-card/");
+    window.location.replace("https://Mattosardy.github.io/cristobo-card/");
   </script>
 </head>
 <body style="background:#ffffff;color:#0a3d91;font-family:system-ui,Arial,sans-serif">
