--- a/index.html
+++ b/index.html
@@ -99,16 +99,11 @@
     .row{ display:flex; gap:12px; flex-wrap:wrap; margin-top:12px }
     .mono{ font-family:"Roboto Mono", monospace; font-size:12px; color:var(--muted) }
     .footer{
-      margin-top:18px; display:flex; justify-content:space-between; align-items:center; gap:10px; flex-wrap:wrap;
+      margin-top:18px; display:flex; justify-content:center; align-items:center;
       border-top:1px dashed var(--border); padding-top:12px;
-    }
-    .chip{
-      display:inline-flex; align-items:center; gap:8px; padding:8px 12px; border-radius:999px;
-      background:#fff; border:1px solid var(--accent-weak); color:var(--accent-weak); font-size:12px;
     }
     .small{ font-size:12px; color:var(--muted) }
     .t3{ color:var(--accent) }
-    .hidden{ display:none }
 
     /* Crédito Telecom T3 */
     .credit{
@@ -158,7 +153,6 @@
     </div>
 
     <div class="footer">
-      <span class="chip">✔︎ Formato congreso</span>
       <span class="small">© <span id="y"></span> <span class="t3">Dra. Maria José Cristobo</span></span>
     </div>
 
