--- a/icon-link.html
+++ b/icon-link.html
@@ -2,28 +2,33 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Info de contacto — Dra. Maria José Cristobo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Dra. Maria José Cristobo — Contacto profesional</title>
+  <meta name="description" content="Vicepresidenta de la Asociación Uruguaya de Ortodoncia. Tarjeta profesional digital.">
 
-  <!-- Open Graph (preview en WhatsApp/LinkedIn) -->
+  <!-- Etiquetas OG (para previsualización en redes) -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Dra. Maria José Cristobo">
-  <meta property="og:description" content="Vicepresidenta · Sociedad Uruguaya de Ortodoncia">
-  <meta property="og:url" content="https://Mattosardy.github.io/cristobo-card/icon-link.html">
-  <meta property="og:image" content="https://Mattosardy.github.io/cristobo-card/og-cristobo.png">
+  <meta property="og:description" content="Vicepresidenta · Asociación Uruguaya de Ortodoncia">
+  <meta property="og:url" content="https://mattosardy.github.io/cristobo-card/">
+  <meta property="og:image" content="https://mattosardy.github.io/cristobo-card/logotipo-contacto.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
+  <meta property="og:image:type" content="image/png">
+  
+  <!-- Fallback para WhatsApp -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Dra. Maria José Cristobo">
+  <meta name="twitter:description" content="Vicepresidenta · Asociación Uruguaya de Ortodoncia">
+  <meta name="twitter:image" content="https://mattosardy.github.io/cristobo-card/logotipo-contacto.png">
 
-  <!-- Redirección inmediata a la landing de contacto -->
-  <meta http-equiv="refresh" content="0; url=https://Mattosardy.github.io/cristobo-card/">
+  <!-- Redirección automática -->
+  <meta http-equiv="refresh" content="1; url=https://mattosardy.github.io/cristobo-card/">
   <script>
-    // Fallback por si el meta refresh no corre
-    window.location.replace("https://Mattosardy.github.io/cristobo-card/");
+    setTimeout(()=>{window.location.href="https://mattosardy.github.io/cristobo-card/";},600);
   </script>
 </head>
-<body style="background:#ffffff;color:#0a3d91;font-family:system-ui,Arial,sans-serif">
-  <noscript>
-    Redirigiendo a <a href="https://Mattosardy.github.io/cristobo-card/">la página de contacto</a>…
-  </noscript>
+<body style="background:#fff;font-family:sans-serif;text-align:center;color:#0A3D91;">
+  <p>Redirigiendo a la tarjeta profesional...</p>
 </body>
 </html>
